@@ -96,6 +96,8 @@ cupt (2.6.0~) UNRELEASED; urgency=low
       - New method 'getArchitecture'.
     - download/manager:
       - Removed 'alive pings'.
+    - download/method{,factory}:
+      - [API break]: don't require shared_ptr< Config > anymore.
   * doc:
     - tutorial:
       - In the man page version, all command examples are now marked bold.
